crates/parser/tests/cases/snapshots/cases__errors__contract_field_after_def.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(contract_field_after_def), module::parse_module,\n    r#\"\ncontract C {\n  fn f() {}\n  x: u8\n}\"#)"

---
error: contract field definitions must come before any function definitions
  ┌─ contract_field_after_def:4:3
  │
4 │   x: u8
  │   ^^^^^


